--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
         </activity>
 
         <activity android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="orientation"/>
+        <activity android:name=".activity.FindPassword_Activity"
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="orientation"/>
+
     </application>
 
 </manifest>
