--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     compile 'org.greenrobot:greendao:3.1.0'
     compile 'org.greenrobot:greendao-generator:3.1.0'
     compile 'com.android.support:design:23.2.0'
+    compile 'com.githang:status-bar-compat:latest.integration'
+
 }
