--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     compile 'org.greenrobot:greendao-generator:3.1.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.githang:status-bar-compat:latest.integration'
+    compile 'com.google.code.gson:gson:2.6.2'
 
 }
