增加popwindow筛选功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     compile 'com.android.support:design:23.2.0'
     compile 'com.githang:status-bar-compat:latest.integration'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.jaeger.statusbaruitl:library:1.0.0'
 
 }
