--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         force = true
     }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation "com.android.support:appcompat-v7:27.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation "com.android.support:design:27.1.1"
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.jakewharton:butterknife:8.4.0'
@@ -50,14 +51,13 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'org.greenrobot:greendao:3.1.0'
     compile 'org.greenrobot:greendao-generator:3.1.0'
-    compile 'com.android.support:design:27.1.1'
+
     compile 'com.githang:status-bar-compat:latest.integration'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.jaeger.statusbaruitl:library:1.0.0'
-
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4'//没有使用特殊Header，可以不加这行
-
-
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4'
+    //没有使用特殊Header，可以不加这行
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 
 }
