--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     compile 'com.jaeger.statusbaruitl:library:1.0.0'
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
     //没有使用特殊Header，可以不加这行
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'//一个开源gif控件
 }
